--- a/templates/main.html
+++ b/templates/main.html
@@ -1,13 +1,10 @@
 <html>
+<head>
+	<title>Modules</title>
+</head>
 <body>
-	<header>
-		{% block header %}{% end %}
-	</header>
 	<content>
 		{% block body %}{% end %}
 	</content>
-	<footer>
-		{% block footer %}{% end %}
-	</footer>
 </body>
 </html>
